--- a/Layout.xaml
+++ b/Layout.xaml
@@ -71,7 +71,7 @@
           <ActivityAction.Argument>
             <DelegateInArgument x:TypeArguments="x:Object" Name="ContextTarget" />
           </ActivityAction.Argument>
-          <Sequence sap:VirtualizedContainerService.HintSize="376,588" sap2010:WorkflowViewState.IdRef="Sequence_6">
+          <Sequence sap:VirtualizedContainerService.HintSize="376,690.666666666667" sap2010:WorkflowViewState.IdRef="Sequence_6">
             <Sequence.Variables>
               <Variable x:TypeArguments="sd:DataTable" Name="ExtractDataTable" />
               <Variable x:TypeArguments="x:Int32" Name="idx" />
@@ -94,6 +94,7 @@
                 </ui:Target>
               </ui:ExtractData.Target>
             </ui:ExtractData>
+            <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="334,62.6666666666667" sap2010:WorkflowViewState.IdRef="WriteLine_7" Text="Read layout " />
             <ui:ForEachRow CurrentIndex="{x:Null}" DataTable="[ExtractDataTable]" DisplayName="For Each Row" sap:VirtualizedContainerService.HintSize="334,52.6666666666667" sap2010:WorkflowViewState.IdRef="ForEachRow_1">
               <ui:ForEachRow.Body>
                 <ActivityAction x:TypeArguments="sd:DataRow">
@@ -152,7 +153,7 @@
                   <ActivityAction.Argument>
                     <DelegateInArgument x:TypeArguments="x:String" Name="item" />
                   </ActivityAction.Argument>
-                  <Sequence DisplayName="Generate Fen" sap:VirtualizedContainerService.HintSize="962,1392.66666666667" sap2010:WorkflowViewState.IdRef="Sequence_9">
+                  <Sequence DisplayName="Generate Fen" sap:VirtualizedContainerService.HintSize="962,1402.66666666667" sap2010:WorkflowViewState.IdRef="Sequence_9">
                     <Sequence.Variables>
                       <Variable x:TypeArguments="x:String" Name="FenChar" />
                     </Sequence.Variables>
@@ -161,7 +162,7 @@
                         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                       </scg:Dictionary>
                     </sap:WorkflowViewStateService.ViewState>
-                    <If Condition="[item = &quot;&quot;]" DisplayName="If current Piece is empty" sap:VirtualizedContainerService.HintSize="920,557.333333333333" sap2010:WorkflowViewState.IdRef="If_3">
+                    <If Condition="[item = &quot;&quot;]" DisplayName="If current Piece is empty" sap:VirtualizedContainerService.HintSize="920,564" sap2010:WorkflowViewState.IdRef="If_3">
                       <If.Then>
                         <Assign sap:VirtualizedContainerService.HintSize="262,62" sap2010:WorkflowViewState.IdRef="Assign_10">
                           <Assign.To>
@@ -173,7 +174,7 @@
                         </Assign>
                       </If.Then>
                       <If.Else>
-                        <If Condition="[ContinueEmpty &gt; 0]" DisplayName="If previous position was empty" sap:VirtualizedContainerService.HintSize="612,406.666666666667" sap2010:WorkflowViewState.IdRef="If_2">
+                        <If Condition="[ContinueEmpty &gt; 0]" DisplayName="If previous position was empty" sap:VirtualizedContainerService.HintSize="612,410" sap2010:WorkflowViewState.IdRef="If_2">
                           <If.Then>
                             <Sequence sap:VirtualizedContainerService.HintSize="304,256" sap2010:WorkflowViewState.IdRef="Sequence_11">
                               <sap:WorkflowViewStateService.ViewState>
@@ -212,7 +213,7 @@
                         </If>
                       </If.Else>
                     </If>
-                    <If Condition="[(idx mod 8) = 7]" DisplayName="If current char is the late of the line" sap:VirtualizedContainerService.HintSize="920,601.333333333333" sap2010:WorkflowViewState.IdRef="If_4">
+                    <If Condition="[(idx mod 8) = 7]" DisplayName="If current char is the late of the line" sap:VirtualizedContainerService.HintSize="920,604.666666666667" sap2010:WorkflowViewState.IdRef="If_4">
                       <If.Then>
                         <Sequence sap:VirtualizedContainerService.HintSize="304,450.666666666667" sap2010:WorkflowViewState.IdRef="Sequence_13">
                           <sap:WorkflowViewStateService.ViewState>
@@ -246,7 +247,7 @@
                               <InArgument x:TypeArguments="x:String">[lineStr + FenChar + "/" + FenStr]</InArgument>
                             </Assign.Value>
                           </Assign>
-                          <Assign sap:VirtualizedContainerService.HintSize="242,62" sap2010:WorkflowViewState.IdRef="Assign_25">
+                          <Assign sap:VirtualizedContainerService.HintSize="262,62" sap2010:WorkflowViewState.IdRef="Assign_25">
                             <Assign.To>
                               <OutArgument x:TypeArguments="x:String">[lineStr]</OutArgument>
                             </Assign.To>
@@ -256,7 +257,7 @@
                               </InArgument>
                             </Assign.Value>
                           </Assign>
-                          <Assign sap:VirtualizedContainerService.HintSize="242,62" sap2010:WorkflowViewState.IdRef="Assign_19">
+                          <Assign sap:VirtualizedContainerService.HintSize="262,62" sap2010:WorkflowViewState.IdRef="Assign_19">
                             <Assign.To>
                               <OutArgument x:TypeArguments="x:Int32">[ContinueEmpty]</OutArgument>
                             </Assign.To>
@@ -267,7 +268,7 @@
                         </Sequence>
                       </If.Then>
                       <If.Else>
-                        <Assign sap:VirtualizedContainerService.HintSize="242,62" sap2010:WorkflowViewState.IdRef="Assign_24">
+                        <Assign sap:VirtualizedContainerService.HintSize="262,62" sap2010:WorkflowViewState.IdRef="Assign_24">
                           <Assign.To>
                             <OutArgument x:TypeArguments="x:String">[lineStr]</OutArgument>
                           </Assign.To>
@@ -277,7 +278,7 @@
                         </Assign>
                       </If.Else>
                     </If>
-                    <Assign sap:VirtualizedContainerService.HintSize="800,62" sap2010:WorkflowViewState.IdRef="Assign_14">
+                    <Assign sap:VirtualizedContainerService.HintSize="920,62" sap2010:WorkflowViewState.IdRef="Assign_14">
                       <Assign.To>
                         <OutArgument x:TypeArguments="x:Int32">[idx]</OutArgument>
                       </Assign.To>
